--- a/index.html
+++ b/index.html
@@ -130,11 +130,8 @@
                             <img src="img/Hero-2.png" class="heroimage animated slideInLeft" alt="Dynamic Package">
                         </div>
 
-                        <h1 class=" animated slideInLeft">Premium Packaging <br>
-                            That Makes Your Brand Stand Out.</h1>
-                        <p class="animated slideInLeft mb-4 pb-2">Trusted partner in packaging for over 25 years.
-                        </p>
-
+                        <h1 class=" animated slideInLeft"></h1>
+                        <p class="animated slideInLeft mb-4 pb-2"></p>
                         <a href="" class="btn btn-primary py-sm-3 px-sm-5 me-3 animated slideInLeft">Get in
                             touch</a>
 
@@ -318,7 +315,7 @@
                             <div class="flex-new">
                                 <h1 class="h1-font-details-5">In house Design facilities.</h1>
                             </div>
-                            <p class="p-font-details-1 align font-size-card-p-new-2 ">Elevate your brand with tailored print solutions, powered by our in-house designer facilities for unique custom designs.</p>
+                            <p class="p-font-details-2 align font-size-card-p-new-2 ">Elevate your brand with tailored print solutions, powered by our in-house designer facilities for unique custom designs.</p>
                         </div>
                     </div>
                 </div>
@@ -329,7 +326,7 @@
                             <div class="flex-new">
                                 <h1 class="h1-font-details-5 align-left">Handholding New customer.</h1>
                             </div>
-                            <p class="p-font-details-1 align font-size-card-p-new-2 ">Handholding facilities to new customer from design to delivery on time to launch new product.</p>
+                            <p class="p-font-details-2 align font-size-card-p-new-2 ">Handholding facilities to new customer from design to delivery on time to launch new product.</p>
                         </div>
                     </div>
                 </div>
@@ -340,7 +337,7 @@
                             <div class="flex-new">
                                 <h1 class="h1-font-details-5 align-left">Experenced team managment.</h1>
                             </div>
-                            <p class="p-font-details-1 align font-size-card-p-new-2 ">Experienced operational team to deliver quality material on time in full.</p>
+                            <p class="p-font-details-2 align font-size-card-p-new-2 ">Experienced operational team to deliver quality material on time in full.</p>
                         </div>
                     </div>
                 </div>
@@ -351,7 +348,7 @@
                             <div class="flex-new">
                                 <h1 class="h1-font-details-5 align-left">Optimal Cost.</h1>
                             </div>
-                            <p class="p-font-details-1 align font-size-card-p-new-2 ">Offering packaging solution at optimal cost, and where management commited to scale up.</p>
+                            <p class="p-font-details-2 align font-size-card-p-new-2 ">Offering packaging solution at optimal cost, and where management commited to scale up.</p>
                         </div>
                     </div>
                 </div>
