--- a/1-product-STAND-UP -POUCHES.html
+++ b/1-product-STAND-UP -POUCHES.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Dynamic Packagings</title>
+    <title>Dynamic Package</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
