--- a/1-product-STAND-UP -POUCHES.html
+++ b/1-product-STAND-UP -POUCHES.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Dynamic Package 2</title>
+    <title>Dynamic Packagings</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -114,7 +114,7 @@
                 </div>
 
             </div>
-            <a href="Contact-us-new.html" class="btn btn-primary py-2 px-4 enquiry">Enquiry</a>
+            <a href="" class="btn btn-primary py-2 px-4 enquiry">Enquiry</a>
         </nav>
     </div>
 
@@ -292,7 +292,6 @@
                             </div>
                         </div>
                         <div class="col-md-6 p-0">
-                            <form action="mailto:ksharath823@gmail.com" method="post" enctype="text/plain">
                             <div class="eqipcard p-4 prod-des">
                                 <h2 class="text-white mb-3 max-width-heading h2">STANDY WITH ZIPEER</h2>
                                 <p class="max-width-heading">Stand up Pouch with Tear Notch and Zipper</p>
@@ -300,7 +299,7 @@
                                     <div class="form-check-inline align-3 ">
 
                                         <div class="margin-top-input">
-                                            <input type="required size" name="size" class="form-control form-yourName"
+                                            <input type="required size" class="form-control form-yourName"
                                                 id="exampleFormControlInput1" placeholder="Type your required size">
                                         </div>
 
@@ -320,7 +319,7 @@
                                     <div class="form-check-inline align-3 ">
 
                                         <div class="margin-top-input">
-                                            <input type="required size" name="Type-of-finishing" class="form-control form-yourName"
+                                            <input type="required size" class="form-control form-yourName"
                                                 id="exampleFormControlInput1" placeholder="Type your finishing ">
                                         </div>
 
@@ -336,9 +335,9 @@
                                 </div>
 
                                 <div class="d-flex mt-5 justify-content-between w-100  mailto:ksharath823@gmail.com">
-                                    <input type="tel" name="Mobile-Number" class="form-control form-yourName margin-right" id="exampleFormControlInput1" placeholder="Type Your Mobile Number">
-                                    <input type="email" name="email"  class="form-control form-yourName margin-right" id="exampleFormControlInput1" placeholder="Email ID">
-                                    <button type="submit" value="Send" class="btn btn-dark">SUBMIT</button>
+                                    <input type="required size" class="form-control form-yourName margin-right" id="exampleFormControlInput1" placeholder="Type Your Mobile Number">
+                                    <input type="required size" class="form-control form-yourName margin-right" id="exampleFormControlInput1" placeholder="Email ID">
+                                    <button type="submit" class="btn btn-dark">SUBMIT</button>
                                     </form>
                                     
                                 </div>
