--- a/Contact-us-new.html
+++ b/Contact-us-new.html
@@ -112,7 +112,7 @@
                 </div>
 
             </div>
-            <a href="Contact-us-new.html" class="btn btn-primary py-2 px-4 enquiry">Enquiry</a>
+            <a href="" class="btn btn-primary py-2 px-4 enquiry">Enquiry</a>
         </nav>
     </div>
     <div class="">
@@ -172,34 +172,34 @@
 
                     <!-- form  -->
                     <div class="col-sm col-md-6 col-sm-12 text-md-left text-sm-center">
-                        <form action="mailto:ksharath823@gmail.com" method="post" enctype="text/plain">
+                        <form>
                             <div class="form-group ">
                                 <label for="exampleFormControlInput1"></label>
-                                <input type="text" name="Name" class="form-control form-yourName" id="exampleFormControlInput1"
+                                <input type="email" class="form-control form-yourName" id="exampleFormControlInput1"
                                     placeholder="Your Name">
                             </div>
 
                             <div class="form-group ">
                                 <label for="exampleFormControlInput1"></label>
-                                <input type="text" name="Location"  class="form-control form-yourName" id="exampleFormControlInput1"
+                                <input type="email" class="form-control form-yourName" id="exampleFormControlInput1"
                                     placeholder="Location">
                             </div>
 
                             <div class="form-group ">
                                 <label for="exampleFormControlInput1"></label>
-                                <input type="number" name="Mobilenumber"  class="form-control form-yourName" id="exampleFormControlInput1"
+                                <input type="email" class="form-control form-yourName" id="exampleFormControlInput1"
                                     placeholder="Mobile Number">
                             </div>
 
                             <div class="form-group ">
                                 <label for="exampleFormControlInput1"></label>
-                                <input type="email" name="email"  class="form-control form-yourName" id="exampleFormControlInput1"
+                                <input type="email" class="form-control form-yourName" id="exampleFormControlInput1"
                                     placeholder="Email Id">
                             </div>
 
                             <div class="form-group ">
                                 <label for="exampleFormControlInput1"></label>
-                                <input type="text" name="servicetype"  class="form-control form-yourName" id="exampleFormControlInput1"
+                                <input type="service" class="form-control form-yourName" id="exampleFormControlInput1"
                                     placeholder="Service Type">
                             </div>
 
@@ -208,7 +208,7 @@
                                 <textarea class="form-control form-yourName" id="exampleFormControlTextarea1"
                                     placeholder="Write Your Message Here." rows="3"></textarea>
                             </div>
-                            <button type="submit" value="Send" class="btn btn-primary form-button">Submit</button>
+                            <button type="submit" class="btn btn-primary form-button">Submit</button>
                         </form>
                     </div>
                 </div>
