--- a/service-page.html
+++ b/service-page.html
@@ -112,7 +112,7 @@
                 </div>
 
             </div>
-            <a href="Contact-us-new.html" class="btn btn-primary py-2 px-4 enquiry">Enquiry</a>
+            <a href="" class="btn btn-primary py-2 px-4 enquiry">Enquiry</a>
         </nav>
     </div>
     <div class="banner bs">
