--- a/Infrastructure.html
+++ b/Infrastructure.html
@@ -116,7 +116,7 @@
                 </div>
 
             </div>
-            <a href="Contact-us-new.html" class="btn btn-primary py-2 px-4 enquiry">Enquiry</a>
+            <a href="" class="btn btn-primary py-2 px-4 enquiry">Enquiry</a>
         </nav>
     </div>
     <div class="banner bs">
