--- a/silver-jubilee.html
+++ b/silver-jubilee.html
@@ -107,7 +107,7 @@
             </div>
 
         </div>
-        <a href="" class="btn btn-primary py-2 px-4 enquiry">Enquiry</a>
+        <a href="Contact-us-new.html" class="btn btn-primary py-2 px-4 enquiry">Enquiry</a>
     </nav>
       <!-- navbar ends -->
 
@@ -317,37 +317,37 @@
 
               <!-- form  -->
               <div class="col-sm col-md-6 col-sm-12 text-left">
-                <form>
+                <form action="mailto:enquiry@dynamicpackagings.com" method="post" enctype="text/plain">
                   <div class="form-group ">
                     <label for="exampleFormControlInput1"></label>
-                    <input type="email" class="form-control form-yourName" id="exampleFormControlInput1"
+                    <input type="text" name="Name" class="form-control form-yourName" id="exampleFormControlInput1"
                       placeholder="Your Name">
                   </div>
 
                   <div class="form-group ">
                     <label for="exampleFormControlInput1"></label>
-                    <input type="email" class="form-control form-yourName" id="exampleFormControlInput1"
+                    <input type="text" name="Location" class="form-control form-yourName" id="exampleFormControlInput1"
                       placeholder="Location">
                   </div>
 
                   <div class="form-group ">
                     <label for="exampleFormControlInput1"></label>
-                    <input type="email" class="form-control form-yourName" id="exampleFormControlInput1"
+                    <input type="number" name="Mobile-Number" class="form-control form-yourName" id="exampleFormControlInput1"
                       placeholder="Mobile Number">
                   </div>
 
                   <div class="form-group ">
                     <label for="exampleFormControlInput1"></label>
-                    <input type="email" class="form-control form-yourName" id="exampleFormControlInput1"
+                    <input type="email" name="Email" class="form-control form-yourName" id="exampleFormControlInput1"
                       placeholder="Email Id">
                   </div>
 
                   <div class="form-group">
                     <label for="exampleFormControlTextarea1"></label>
-                    <textarea class="form-control form-yourName" id="exampleFormControlTextarea1"
+                    <textarea type="text" name="Message" class="form-control form-yourName" id="exampleFormControlTextarea1"
                       placeholder="Write Your Message Here." rows="3"></textarea>
                   </div>
-                  <button type="submit" class="btn btn-primary form-button">Submit</button>
+                  <button type="submit" value="Send" class="btn btn-primary form-button">Submit</button>
                 </form>
               </div>
             </div>
@@ -357,74 +357,74 @@
 
 
 
-      <!-- Footer Start -->
-      <div class="container-fluid bg-dark text-white footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
-        <div class="container py-5">
-            <div class="row container-2">
-                <div class="col-md-4">
-                    <img src="././img/Logo.png" alt="">
-                    <p class="mt-3">Since 1998, <br>
-                        <span class="font-weight-bold"> DYNAMIC PAKAGING PVT. LTD.</span> <br>
-                        Plot no.44B/1,KIADBIndustrial Area, Manchakalkuppe village, Hirehalli, Tumkur - 573169. <br>
-                        Karnataka, India
-                    </p>
-                </div>
-                <div class="col-md-2">
-                    <h5 class="section-title mb-4">Pages</h5>
-                    <a class="btn btn-link" href="index.html">Home</a>
-                    <a class="btn btn-link" href="about.html">About Us</a>
-                    <a class="btn btn-link" href="1-product-STAND-UP -POUCHES.html">Product & Services</a>
-                    <a class="btn btn-link" href="">Our Work</a>
-                    <a class="btn btn-link" href="Infrastructure.html">Infrastructure</a>
-                </div>
-                <div class="col-md-2">
-                    <h5 class="section-title mb-4">Products</h5>
-                    <a class="btn btn-link" href="1-product-STAND-UP -POUCHES.html">Products</a>
-                    <a class="btn btn-link" href="">Services</a>
-                </div>
+ <!-- Footer Start -->
+ <div class="container-fluid bg-dark text-white footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
+  <div class="container py-5">
+      <div class="row container-2">
+          <div class="col-md-4">
+              <img src="././img/Logo.png" alt="">
+              <p class="mt-3">Since 1998, <br>
+                  <span class="font-weight-bold"> DYNAMIC PAKAGING PVT. LTD.</span> <br>
+                  Plot no.44B/1,KIADBIndustrial Area, Manchakalkuppe village, Hirehalli, Tumkur - 573169. <br>
+                  Karnataka, India
+              </p>
+          </div>
+          <div class="col-md-2">
+              <h5 class="section-title mb-4">Pages</h5>
+              <a class="btn btn-link" href="index.html">Home</a>
+              <a class="btn btn-link" href="about.html">About Us</a>
+              <a class="btn btn-link" href="1-product-STAND-UP -POUCHES.html">Product & Services</a>
+              <a class="btn btn-link" href="">Our Work</a>
+              <a class="btn btn-link" href="Infrastructure.html">Infrastructure</a>
+          </div>
+          <div class="col-md-2">
+              <h5 class="section-title mb-4">Products</h5>
+              <a class="btn btn-link" href="1-product-STAND-UP -POUCHES.html">Products</a>
+              <a class="btn btn-link" href="">Services</a>
+          </div>
 
-                <div class="col-md-2">
-                    <h5 class="section-title mb-4">Help</h5>
-                    <a class="btn btn-link" href="">Blogs / Insights</a>
-                    <a class="btn btn-link" href="">Contact Us</a>
-                </div>
+          <div class="col-md-2">
+              <h5 class="section-title mb-4">Help</h5>
+              <a class="btn btn-link" href="">Blogs / Insights</a>
+              <a class="btn btn-link" href="">Contact Us</a>
+          </div>
 
-                <div class="col-md-2">
-                    <h5 class="section-title mb-4">Useful Links</h5>
-                    <a class="btn btn-link" href="">Terms & Conditions</a>
-                    <a class="btn btn-link" href="">Cookies Policy</a>
-                </div>
-            </div>
+          <div class="col-md-2">
+              <h5 class="section-title mb-4">Useful Links</h5>
+              <a class="btn btn-link" href="">Terms & Conditions</a>
+              <a class="btn btn-link" href="">Cookies Policy</a>
+          </div>
+      </div>
 
-            <div class="row mt-4 text-center text-lg-right">
-                <div class="col-md-12 text-md-right text-left">
-                    <span class="small mr-md-4">Mob&nbsp; : +91 9986882258&nbsp; |&nbsp; +91 9845173308</span>
+      <div class="row mt-4 text-center text-lg-right">
+          <div class="col-md-12 text-md-right text-left">
+              <span class="small mr-md-4">Mob&nbsp; : +91 9986882258&nbsp; |&nbsp; +91 9845173308</span>
 
-                    <span class="ml-md-5 sm-block">
-                        <a class="btn btn-social pl-0" href=""><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-social" href=""><i class="fab fa-instagram"></i></a>
-                        <a class="btn btn-social" href=""><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
-                    </span>
-                </div>
+              <span class="ml-md-5 sm-block">
+                  <a class="btn btn-social pl-0" href=""><i class="fab fa-facebook-f"></i></a>
+                  <a class="btn btn-social" href=""><i class="fab fa-instagram"></i></a>
+                  <a class="btn btn-social" href=""><i class="fab fa-twitter"></i></a>
+                  <a class="btn btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
+              </span>
+          </div>
 
-            </div>
-        </div>
-        <div class="container">
-            <div class="copyright">
-                <div class="row">
-                    <div class="col-md-12 mb-3 mb-md-0">
-                        <a href="#" class="small">Copyright © 2022-2023 Dynamic Packaging Pvt. Ltd. Plot no.44-B/1, KIAD
-                            BIndustrial Area, Manchakalkuppe village, Hirehalli, Tumkur-573169. Karnataka, India <br>
-                            Since 2015 Dynamic Packaging Pvt. ltd. believes in constantly supplying quality products and
-                            timely services to all customers.
-                    </div>
+      </div>
+  </div>
+  <div class="container">
+      <div class="copyright">
+          <div class="row">
+              <div class="col-md-12 mb-3 mb-md-0">
+                  <a href="#" class="small">Copyright © 2022-2023 Dynamic Packaging Pvt. Ltd. Plot no.44-B/1, KIAD
+                      BIndustrial Area, Manchakalkuppe village, Hirehalli, Tumkur-573169. Karnataka, India <br>
+                      Since 2015 Dynamic Packaging Pvt. ltd. believes in constantly supplying quality products and
+                      timely services to all customers.
+              </div>
 
-                </div>
-            </div>
-        </div>
-    </div>
-      <!-- Footer End -->
+          </div>
+      </div>
+  </div>
+</div>
+<!-- Footer End -->
 
 
       <!-- Back to Top -->
