--- a/about.html
+++ b/about.html
@@ -33,9 +33,6 @@
   <!-- Template Stylesheet -->
   <link href="css/about-style.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
-
-
-
 </head>
 
 <body>
@@ -112,7 +109,7 @@
             </div>
 
         </div>
-        <a href="" class="btn btn-primary py-2 px-4 enquiry">Enquiry</a>
+        <a href="Contact-us-new.html" class="btn btn-primary py-2 px-4 enquiry">Enquiry</a>
     </nav>
 
 
@@ -170,12 +167,6 @@
                 closely with clients to understand their unique requirements and provide customised solutions that meet
                 their specific needs.
               </p>
-              <p class="yrsOf-para">
-                At Dynamic Packaging Pvt. Ltd., we are committed to sustainability and environmental responsibility. Our
-                products are made using eco-friendly materials and processes, ensuring minimal waste and a low carbon
-                footprint. We believe in creating value not just for our clients but for society and the planet as a
-                whole.
-              </p>
             </div>
           </div>
 
@@ -184,8 +175,8 @@
       <!-- overview ends -->
 
       <!-- our history -->
-      <div class="container-1  text-center">
-        <div class="row justify-content-lg-between align-items-lg-center max-width-new ">
+      <div class="text-center">
+        <div class="row justify-content-lg-between align-items-lg-center ">
           <div class="col-lg-6 mb-5 mb-lg-0 align-self-start">
             <h6 class="title-ourHistory">
               OUR HISTORY
@@ -205,7 +196,7 @@
 
           <div class="para-OurHistory">
             <div class="para-textHistory">
-              <p class="para-text ">
+              <p class="para-text pt-0">
                 Dynamic Packaging was founded 25 years ago, in 1998, by B. Richard D&#39;Souza in Tumkur District,
                 Karnataka. Our company has a long and successful history in the print and packaging industries. From our
                 humble beginnings, we have grown into a leading provider of printing and packaging solutions for
@@ -250,6 +241,7 @@
             </h1>
 
           </div>
+          <div class="container-fluid">
           <div class="row ">
             <div class="col-lg-4 col-ourTeam">
               <img class="team-img" src="Images/team img 1.png" alt="">
@@ -292,7 +284,7 @@
             </div>
             <!-- /.col-lg-4 -->
           </div>
-
+        </div>
         </section>
 
         <!-- our mission / vision -->
@@ -313,8 +305,8 @@
 
           <div class="row container-vision">
             <div class="col-lg-6">
-              <div class="container-dark d-flex align-items-start">
-                <div class="pic"><img src="Images/vision eye-light.png" class="img-fluid" alt=""></div>
+              <div class="container-light border d-flex align-items-start align-items-center">
+                <div class="pic"><img src="Images/vision eye-dark.png" class="img-fluid" alt=""></div>
                 <div class="member-info wow">
                   <h4>OUR VISION</h4>
                   <p>To be the leading provider of sustainable packaging solutions across India, that protect and
@@ -325,7 +317,7 @@
             </div>
 
             <div class="col-lg-6">
-              <div class="container-light d-flex align-items-start">
+              <div class="container-light border d-flex align-items-start">
                 <div class="pic"><img src="Images/target-dark.png" class="img-fluid" alt=""></div>
                 <div class="member-info wow fadeInUp">
                   <h4>OUR MISSION</h4>
