--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                 <div class="col-md-3 pb-4">
                     <div class="gallery-item">
                         <img src="img/Products/5-Flexo-Woven-Bags.png" class="img-fluid h-100" alt="">
-                        <a href="3-bopp-laminated-woven-bags.html" class="gbtn">Flexo Woven Bags
+                        <a href="3-bopp-laminated-woven-bags.html" class="gbtn">Standup Pouches
                             <img src="./img/Arrow.svg" alt="">
                         </a>
                     </div>
@@ -286,7 +286,7 @@
                 <div class="col-md-6 pr-md-0 pb-4">
                     <div class="gallery-item">
                         <img src="img/Products/6-Standup Pouches.png" class="img-fluid h-100" alt="">
-                        <a href="1-product-STAND-UP -POUCHES.html" class="gbtn">Standup Pouches
+                        <a href="1-product-STAND-UP -POUCHES.html" class="gbtn">Flexo Woven Bags
                             <img src="./img/Arrow.svg" alt="">
                         </a>
                     </div>
